# ia-agents-testing

./: .gitignore
ia-agent-tickets-v2/agent/agent-v2/: .env.example  DOCUMENTACION_API.md  Dockerfile  checkpoints.db-shm  checkpoints.db-wal  dialog_test.py  feedback.db  final_test_agent.py  main.py  pyproject.toml  run.py
ia-agent-tickets-v2/agent/agent-v2/adapters/: express_adapter.py  http_adapter.py  odoo_adapter.py  postgres_adapter.py
ia-agent-tickets-v2/agent/agent-v2/agent_v2_Doc/: PLAN.md  implementation_plan.md
ia-agent-tickets-v2/agent/agent-v2/agent_v2_Doc/api-doc/: campos-modulo-helpdesk.md
ia-agent-tickets-v2/agent/agent-v2/api/middleware/: auth.py
ia-agent-tickets-v2/agent/agent-v2/api/routes/: chat.py  invoke.py  stream.py
ia-agent-tickets-v2/agent/agent-v2/api/schemas/: chat.py  (+1 more)
ia-agent-tickets-v2/agent/agent-v2/config/: settings.py
ia-agent-tickets-v2/agent/agent-v2/core/: agent.py  graph.py  state.py
ia-agent-tickets-v2/agent/agent-v2/feedback/: collector.py  schemas.py
ia-agent-tickets-v2/agent/agent-v2/ports/: rag_port.py  ticket_port.py
ia-agent-tickets-v2/agent/agent-v2/prompts/: base.py  creator.py  resolver.py  supervisor.py
ia-agent-tickets-v2/agent/agent-v2/rag/: embeddings.py  store.py
ia-agent-tickets-v2/agent/agent-v2/scratch/: test_bugs_ab.py  test_fullflow.py  test_improvements.py  test_multiactor.py  test_rag_quality.py  test_resilience.py  test_rol.py
ia-agent-tickets-v2/agent/agent-v2/tools/: rag_tools.py  ticket_tools.py  user_tools.py
ia-agent-tickets-v2/agent/agent-v2/vector_store/: chroma.sqlite3
(+83 files in other folders)
